# gtk4-nvidia-monitor-rust

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.lock.license  Cargo.toml  README.md  SECURITY.md  build.rs  codecov.yml  install_schemas.sh  style.css
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  report-a-security-vulnerability.md
.github/workflows/: rust.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.md  async.md  pull_request_template.md  subclassing.md  system_tray.md
src/: com.gtk_d.NvidiaExtensionRust.gschema.xml  com.gtk_d.NvidiaMonitorRust.gschema.xml  lib.rs  main.rs  org.gtk_d.NvidiaExtensionRust.gschema.xml
src/custom_button/: imp.rs  mod.rs
src/formatter/: imp.rs  mod.rs
src/gpu_page/: imp.rs  mod.rs
src/mainwindow/: imp.rs  mod.rs
src/modificationwindow/: imp.rs  mod.rs
src/processor/: imp.rs  mod.rs
src/property/: imp.rs  mod.rs
src/provider/: imp.rs  mod.rs
src/resources/: gpu-page.ui  main-window.ui  modification-window.ui  resources.gresource.xml  settings-window.ui  window.ui
src/settingswindow/: imp.rs  mod.rs
src/subprocess/: mod.rs
src/window/: imp.rs  mod.rs
tests/: integration_tests_1.rs
